--- a/src/styles.css
+++ b/src/styles.css
@@ -118,13 +118,13 @@ body,
 .content-shell {
   flex: 1;
   display: flex;
-  overflow: hidden;
+  overflow:auto;
 }
 
 .content-shell > * {
   flex: 1;
   display: flex;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .sidebar {
@@ -1596,9 +1596,9 @@ body,
   color: rgba(226, 232, 240, 0.68);
 }
 
-[data-theme='light'] .login-hint {
+/* [data-theme='light'] .login-hint {
   color: rgba(71, 85, 105, 0.72);
-}
+} */
 
 .login-credentials {
   color: rgba(226, 232, 240, 0.6);
@@ -1616,7 +1616,7 @@ body,
 
 .login-showcase {
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   padding: 48px 60px;
 }
 
@@ -1693,6 +1693,7 @@ body,
 
 .login-hero-card strong {
   font-size: 1.65rem;
+  color: #fff;
 }
 
 .login-hero-card span:last-child {
@@ -1708,11 +1709,13 @@ body,
   .login-panel {
     padding: 48px 40px;
   }
-
-  .login-showcase {
+  .login-hero-copy{
+    max-width: 100%;
+  }
+  /* .login-showcase {
     min-height: 460px;
     padding: 42px;
-  }
+  } */
 }
 
 @media (max-width: 720px) {
